tests/react_16_9/react_16_9.exp
Error ------------------------------------------------------------------------------------------------- profiler.js:5:20

Cannot get `React.ProfilerOnRenderFnType` because property `ProfilerOnRenderFnType` is missing in module `react` [1].

   profiler.js:5:20
   5| const onRenderBad: React.ProfilerOnRenderFnType = ( // Error, the type isnt exported
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   profiler.js:3:1
   3| import * as React from 'react';
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------ profiler.js:17:12

Cannot create `React.Profiler` element because:
 - property `id` is missing in props [1] but exists in object type [2].
 - property `onRender` is missing in props [1] but exists in object type [2].

   profiler.js:17:12
    17| const _b = <React.Profiler />; // Error, id and onRender are required
                   ^^^^^^^^^^^^^^^^^^ [1]

References:
   <BUILTINS>/react.js:392:56
                                                               v-
   392|   declare export var Profiler: React$AbstractComponent<{|
   393|     children?: React$Node,
   394|     id: string,
   395|     onRender: ProfilerOnRenderFnType,
   396|   |}, void>;
          -^ [2]



Found 3 errors
